--- a/src/css/markdown.css
+++ b/src/css/markdown.css
@@ -165,8 +165,8 @@ sub { bottom: -0.25em; }
 
 /* Lists */
 ul, ol { 
-  margin: 1em 0; 
-  padding: 0 0 0 2em; 
+  /* margin: 1em 0; 
+  padding: 0 0 0 2em;  */
 }
 
 ol li {
